--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ click==6.6
 dataset==0.6.4
 Flask==0.11.1
 Flask-Cors==3.0.2
+Flask-Dataset==0.1.2
 itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
+MySQL-python==1.2.5
 normality==0.2.4
 python-editor==1.0.1
 PyYAML==3.12
