--- a/config/development.cfg
+++ b/config/development.cfg
@@ -1,3 +1,3 @@
 DEBUG = True
-DATASET_DATABASE_URI='sqlite:///tasteat/recipes.db'
+DATASET_DATABASE_URI = "mysql://user:password@localhost/development_database"
 HOST = '0.0.0.0'
