--- a/config/development.cfg
+++ b/config/development.cfg
@@ -1,3 +1,3 @@
 DEBUG = True
-DATASET_DATABASE_URI = "mysql://user:password@localhost/development_database"
+DATASET_DATABASE_URI = "mysql://user:password@localhost/development_database?charset=utf8&use_unicode=True"
 HOST = '0.0.0.0'
