--- a/config/production.cfg
+++ b/config/production.cfg
@@ -1,3 +1,3 @@
 DEBUG = False
-DATASET_DATABASE_URI = "mysql://user:password@localhost/production_database"
+DATASET_DATABASE_URI = "mysql://user:password@localhost/production_database?charset=utf8&use_unicode=True"
 HOST = '0.0.0.0'
